Add lab7: videos collection

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -11,4 +11,5 @@ COPY . .
 
 RUN pip3 install -r requirements.txt
 
+RUN export UBOOK_SECRET_KEY="put-your-secret-key-here"
 CMD ["flask", "run", "--host", "0.0.0.0"]
