--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,1 +1,25 @@
+alembic==1.7.5
+attrs==21.2.0
+click==8.0.3
+dominate==2.6.0
 Flask==2.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Migrate==3.1.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+Mako==1.1.6
+MarkupSafe==2.0.1
+packaging==21.3
+pluggy==1.0.0
+psycopg2==2.9.2
+py==1.11.0
+pyparsing==3.0.6
+pytest==6.2.5
+SQLAlchemy==1.4.27
+toml==0.10.2
+visitor==0.1.3
+Werkzeug==2.0.2
